syntax = "proto3";

package sfc_scheme;

import "Models/Scheme/Team/team_scheme.proto";

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Scheme.Team.Find";

message GetTeamSchemesResponse
{
    repeated TeamScheme items = 1;
}