syntax = "proto3";

package sfc_scheme;

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Scheme.Team.Get";

message GetTeamSchemeRequest
{
    int64 id = 1;
}